# FilmFind

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  DOCKER_GUIDE.md  README.md  TESTING_GUIDE.md  deploy.md  docker-compose.yml  init-data.sh  push_to_hf.sh  quick-start.sh
backend/: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml  requirements.txt  setup-dev.sh
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_07_1054-1abfd592bb52_initial_schema_movies_genres_keywords_.py  2026_02_09_2255-b3d41db74ccc_initial_polymorphic_schema.py  2026_03_08_0001-v1_score_columns_session_tables.py  2026_03_08_0002-v2_pgvector_enriched_schema.py  2026_03_08_0003-v3_is_fully_scored.py  2026_03_11_0001-v4_supabase_image_columns.py  2026_05_31_0939-a412a545a5e9_add_confidence_score_to_search_sessions.py  2026_06_27_0001-v5_concrete_table_inheritance.py  2026_07_10_0233-394e2f71958e_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: cache_dependencies.py  constants.py  dependencies.py  exceptions.py  middleware.py
backend/app/core/: __init__.py  base_cache_strategy.py  cache.py  config.py  (+9 more)
backend/scripts/: backfill_streaming.py  benchmark_rerankers.py  build_index.py  enrich_movies.py  generate_embeddings.py  ingest_media.py  ingest_tmdb.py  ingest_tv_shows.py  migrate_images_to_supabase.py  score_films.py  seed_database.py  test_query_parser.py
backend/tests/: test_api_routes.py  test_constraint_validator.py  test_database_utils.py  test_embedding_batch_processor.py  test_embedding_service.py  test_embeddings.py  test_enum_parsing.py  test_filter_engine.py  test_json_utils.py  test_llm_client.py  test_math_utils.py  test_models.py  test_prompt_eval.py  test_query_embedding.py  test_query_parser.py  test_query_schemas.py  test_repositories.py  test_reranker.py  test_retrieval_engine.py  test_schema_validators.py  test_scoring.py  test_scoring_constants.py  test_scoring_engine.py  test_search.py  test_security_dependencies.py  test_sixty.py  test_text_preprocessor.py  test_vector_search.py
(+162 files in other folders)
