[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filmfind-backend"
version = "0.1.0"
description = "FilmFind AI Movie Discovery Engine - Backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "FilmFind Team"},
]

[tool.mypy]
# mypy configuration for type checking
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports for third-party libraries
[[tool.mypy.overrides]]
module = [
    "httpx.*",
    "loguru.*",
    "fastapi.*",
    "pydantic.*",
    "sqlalchemy.*",
    "redis.*",
    "sentence_transformers.*",
    "faiss.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
# pytest configuration
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
# Coverage configuration
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
# Coverage reporting
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]

[tool.ruff]
# Ruff also reads from .ruff.toml, but can be configured here too
# Using .ruff.toml for better organization
